[gd_scene load_steps=3 format=3 uid="uid://tlgqrs46k7au"]

[ext_resource type="Script" path="res://scripts/utility/zone_changer.gd" id="1_4mdpb"]

[sub_resource type="BoxShape3D" id="BoxShape3D_vsixx"]
size = Vector3(3.44006, 2.93408, 3.31586)

[node name="ZoneChanger" type="Node3D"]
script = ExtResource("1_4mdpb")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("BoxShape3D_vsixx")

[node name="ZoneName" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
billboard = 1
text = "Placeholder"
font_size = 64

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
